--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+body {
+    font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.trainings-container {
+    width: 600px;
+    margin: 0 auto;
+}
+.trainings-header {
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.trainings-form {
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+}
+.date-input-container {
+    width: 35%;
+}
+.date-input-label {
+    display: block;
+}
+.date-input {
+    display: block;
+}
+.distance-input-container {
+    width: 35%;
+}
+.distance-input-label{
+    display: block;
+}
+.distance-input {
+    display: block;
+}
+.submit-button-container{
+    width: 30%;
+    text-align: center;
+}
+.submit-button{
+    display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.note-element {
+    display: flex;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.note-date {
+    width: 35%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.note-distance {
+    width: 35%;
+    text-align: center;
 }
